--- a/css/reveal.css
+++ b/css/reveal.css
@@ -209,9 +209,11 @@ body {
 .reveal img,
 .reveal video,
 .reveal iframe {
+    margin: 0 auto;
 	max-width: 95%;
 	max-height: 95%;
 }
+
 
 /** Prevents layering issues in certain browser/transition combinations */
 .reveal a {
@@ -335,6 +337,13 @@ body {
 .reveal small {
 	display: inline-block;
 	font-size: 0.6em;
+	line-height: 1.2em;
+	vertical-align: top;
+}
+
+.reveal vsmall {
+	display: inline-block;
+	font-size: 0.4em;
 	line-height: 1.2em;
 	vertical-align: top;
 }
